security: OWASP hardening (CSP, CORS allowlist, rate limit auth, strict cookies, CSRF __Host-); docs: SECURITY.md, .env.example; lint fix

--- a/.env.example
+++ b/.env.example
@@ -1,25 +1,15 @@
-# Copy to .env (do not commit real secrets)
-# Node
+# Server
 NODE_ENV=development
 PORT=8080
 HOST=0.0.0.0
-
-# App
-CLIENT_URL=http://localhost:5173
-CORS_ORIGIN=http://localhost:5173
-COOKIE_DOMAIN=localhost
-SESSION_SECURE=false
-
-# JWT
-JWT_SECRET=replace_me_dev_only
-JWT_EXPIRES=1h
-
-# CSRF
-CSRF_COOKIE_NAME=csrf_token
-CSRF_HEADER_NAME=x-csrf-token
-
-# Logging
-LOG_LEVEL=debug
-
-# HTTPS
 TRUST_PROXY=1
+CLIENT_URL=http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:5173
+LOG_LEVEL=dev
+
+# Security
+JWT_SECRET=replace_me_dev_only
+SESSION_SECURE=false
+# COOKIE_DOMAIN=yourdomain.com
+# CSRF_COOKIE_NAME=csrf_token
+# JWT_EXPIRES=1h
