--- a/shared/package.json
+++ b/shared/package.json
@@ -7,7 +7,8 @@
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
-    "clean": "rimraf dist"
+    "clean": "rimraf dist",
+    "test": "echo No tests for @3d/shared"
   },
   "dependencies": {
     "zod": "^3.23.8"
